--- a/模板语法.html
+++ b/模板语法.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>初识vue</title>
+    <title>模板语法</title>
     <!--    引入Vue-->
     <script type="text/javascript" src="../js/vue.js"></script>
 </head>
